# CLIrics

./: Cargo.toml  test.txt
src/: main.rs
