[package]
name = "cmus-lyrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpris = "1.1.2"
reqwest = { version = "0.11.3", default-features = false, features = ["rustls-tls", "blocking", "json"] }
scraper = "0.13.0"